# Computer-Graphics-homeworks

./: CMakeLists.txt
Butterfly/include/: butterfly.hpp  butterfly_body.hpp  butterfly_wing.hpp  camera.hpp  catmullrom.hpp  circle.hpp  cursor.hpp  flower.hpp  flowermanager.hpp  opengl.hpp  petals.hpp  physics.hpp  utils.hpp
Butterfly/src/: butterfly.cpp  butterfly_body.cpp  butterfly_wing.cpp  camera.cpp  catmullrom.cpp  circle.cpp  flower.cpp  flowermanager.cpp  main.cpp  petals.cpp  physics.cpp
Dodge the tire/include/: animatable.hpp  camera.hpp  collisiondetector.hpp  geometry.hpp  light.hpp  mobius.hpp  object.hpp  opengl.hpp  paramsurface.hpp  phongshader.hpp  racetrack.hpp  renderstate.hpp  roadtexture.hpp  scene.hpp  shader.hpp  skytexture.hpp  sphere.hpp  texture.hpp  tire.hpp  tiretexture.hpp  torus.hpp  utils.hpp
Dodge the tire/src/: camera.cpp  collisiondetector.cpp  geometry.cpp  main.cpp  mobius.cpp  object.cpp  paramsurface.cpp  phongshader.cpp  racetrack.cpp  roadtexture.cpp  scene.cpp  shader.cpp  skytexture.cpp  sphere.cpp  texture.cpp  tire.cpp  torus.cpp
Fish Tank/include/: camera.hpp  fisheyecamera.hpp  fishtank.hpp  glass.hpp  gold.hpp  goldenthing.hpp  hit.hpp  intersectable.hpp  light.hpp  material.hpp  normalcamera.hpp  paraboloid.hpp  paraboloidfishtank.hpp  ray.hpp  rectangularfishtank.hpp  room.hpp  scene.hpp  utils.hpp  wall.hpp
Fish Tank/src/: camera.cpp  fisheyecamera.cpp  glass.cpp  gold.cpp  goldenthing.cpp  intersectable.cpp  light.cpp  main.cpp  material.cpp  normalcamera.cpp  paraboloid.cpp  paraboloidfishtank.cpp  ray.cpp  rectangularfishtank.cpp  room.cpp  scene.cpp  wall.cpp
